prelim commit